--- a/src/app/components/dishes-list/dishes-list.component.html
+++ b/src/app/components/dishes-list/dishes-list.component.html
@@ -1,53 +1,54 @@
 <div class="cards">
   <mat-card class="example-card" *ngFor=" let item of dishes$ | async; index as i ">
-  <mat-card-header>
-    <mat-card-title>{{item.nome}}</mat-card-title>
-    <!--<mat-card-subtitle>{{item.descricao}}</mat-card-subtitle>-->
-  </mat-card-header>
-  <img mat-card-image 
-  src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
-  <mat-card-content>
-    <p>
-      {{item.descricao}}
-    </p>
-  </mat-card-content>
-  <mat-card-actions> 
-    
-    <button mat-mini-fab color="green" aria-label="Via WhatsApp" title="Via WhatsApp">
-      <a [attr.href]="itemWhatsUp(item)"> 
-          <img width="25" height="25" src="assets/images/icon-whatsapp.svg">
-      </a>
-    </button>
-    <span>&nbsp;&nbsp;</span>
-    
-    <button mat-mini-fab color="green"  aria-label="Via celular" title="Via celular">
-      <a href="tel:+5511961669777">
-        <span class="material-icons">call</span>
-      </a>
-    </button>
-    <span>&nbsp;&nbsp;</span>
-    <button mat-mini-fab color="green"  aria-label="Via sms celular" title="Via sms celular">
-      <a href="sms://5511961669777?body=Olá desejo encomendar {{item.nome}}">
-        <span class="material-icons">textsms</span>
-      </a>
-    </button>
-    <span>&nbsp;&nbsp;</span>
-    <button mat-mini-fab color="sdsd"  aria-label="Via email" title="Via email">
-      <a  href="mailto:angelica@email.com?subject=Encomenda cardápio&body=Olá desejo encomendar {{item.nome}}">
-        <span class="material-icons">mail_outline</span>          
-      </a>
-          
-    </button>
-  <span style="flex:1" >&nbsp;&nbsp;</span>
-  <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button" data-size="small"></div>
+    <mat-card-header>
+      <mat-card-title>{{item.nome}}</mat-card-title>
+      <!--<mat-card-subtitle>{{item.descricao}}</mat-card-subtitle>-->
+    </mat-card-header>
+    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+    <mat-card-content>
+      <p>
+        {{item.descricao}}
+      </p>
+    </mat-card-content>
+    <mat-card-actions>
 
-    <button mat-mini-fab color="white"  aria-label="Compartilhar" 
-    class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button" data-size="small"
-     title="Compartilhar">
-      <a target="_blank" href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse" class="fb-xfbml-parse-ignore material-icons">share</a>
-          
-    </button>
-  </mat-card-actions>
-</mat-card>
+      <button mat-mini-fab color="green" aria-label="Via WhatsApp" title="Via WhatsApp">
+        <a [attr.href]="itemWhatsUp(item)">
+          <img width="25" height="25" src="bendita-ka/dist/assets/images/icon-whatsapp.svg">
+        </a>
+      </button>
+      <span>&nbsp;&nbsp;</span>
+
+      <button mat-mini-fab color="green" aria-label="Via celular" title="Via celular">
+        <a href="tel:+5511961669777">
+          <span class="material-icons">call</span>
+        </a>
+      </button>
+      <span>&nbsp;&nbsp;</span>
+      <button mat-mini-fab color="green" aria-label="Via sms celular" title="Via sms celular">
+        <a href="sms://5511961669777?body=Olá desejo encomendar {{item.nome}}">
+          <span class="material-icons">textsms</span>
+        </a>
+      </button>
+      <span>&nbsp;&nbsp;</span>
+      <button mat-mini-fab color="sdsd" aria-label="Via email" title="Via email">
+        <a href="mailto:angelica@email.com?subject=Encomenda cardápio&body=Olá desejo encomendar {{item.nome}}">
+          <span class="material-icons">mail_outline</span>
+        </a>
+
+      </button>
+      <span style="flex:1">&nbsp;&nbsp;</span>
+      <div class="fb-share-button" data-href="https://developers.facebook.com/docs/plugins/" data-layout="button"
+        data-size="small"></div>
+
+      <button mat-mini-fab color="white" aria-label="Compartilhar" class="fb-share-button"
+        data-href="https://developers.facebook.com/docs/plugins/" data-layout="button" data-size="small"
+        title="Compartilhar">
+        <a target="_blank"
+          href="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fdevelopers.facebook.com%2Fdocs%2Fplugins%2F&amp;src=sdkpreparse"
+          class="fb-xfbml-parse-ignore material-icons">share</a>
+
+      </button>
+    </mat-card-actions>
+  </mat-card>
 </div>
-
