Changed url for http calls

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -78,16 +78,23 @@ body {
 ::-webkit-scrollbar-thumb:hover {
   background: #555;
 }
-.mat-icon {
-  display: none !important;
-}
 :host ::ng-deep {
   .mat-toolbar.mat-primary,
   .mat-flat-button.mat-primary,
   .mat-raised-button.mat-primary,
   .mat-fab.mat-primary,
   .mat-mini-fab.mat-primary {
+    display: none;
     background: #f56400;
     color: #fff;
   }
+}
+
+.mat-toolbar.mat-primary,
+.mat-flat-button.mat-primary,
+.mat-raised-button.mat-primary,
+.mat-fab.mat-primary,
+.mat-mini-fab.mat-primary {
+  background: #f56400;
+  color: #fff;
 }
