--- a/src/app/components/dishes-list/dishes-list.component.html
+++ b/src/app/components/dishes-list/dishes-list.component.html
@@ -4,7 +4,7 @@
       <mat-card-title>{{item.nome}}</mat-card-title>
       <!--<mat-card-subtitle>{{item.descricao}}</mat-card-subtitle>-->
     </mat-card-header>
-    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+    <img mat-card-image [src]="item.imageUrl" [attr.alt]="item.descricao || item.nome">
     <mat-card-content>
       <p>
         {{item.descricao}}
