--- a/src/app/components/dishes-list/dishes-list.component.html
+++ b/src/app/components/dishes-list/dishes-list.component.html
@@ -4,11 +4,13 @@
       <mat-card-title>{{item.nome}}</mat-card-title>
       <!--<mat-card-subtitle>{{item.descricao}}</mat-card-subtitle>-->
     </mat-card-header>
-    <img mat-card-image [src]="item.imageUrl" [attr.alt]="item.descricao || item.nome">
+    <div mat-card-image>
+      <img mat-card-image [src]="item.imageUrl" [attr.alt]="item.descricao || item.nome">
+      <span class="preco">R$: {{item.preco}},00</span>
+    </div>
     <mat-card-content>
       <p class="d-flex">
         <span class="descr">{{item.descricao}}</span>
-        <span class="preco">R$: {{item.preco}},00</span>
       </p>
     </mat-card-content>
     <mat-card-actions>
