--- a/src/app/components/dishes-list/dishes-list.component.html
+++ b/src/app/components/dishes-list/dishes-list.component.html
@@ -4,8 +4,8 @@
       <mat-card-title>{{item.nome}}</mat-card-title>
       <!--<mat-card-subtitle>{{item.descricao}}</mat-card-subtitle>-->
     </mat-card-header>
-    <div mat-card-image>
-      <img mat-card-image [src]="item.imageUrl" [attr.alt]="item.descricao || item.nome">
+    <img mat-card-image [src]="item.imageUrl" [attr.alt]="item.descricao || item.nome">
+    <div>
       <span class="preco">R$: {{item.preco}},00</span>
     </div>
     <mat-card-content>
