--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,5 +1,11 @@
 <app-search (onSearch)="onSearch($event)"></app-search>
+<mat-chip-list>
+  <mat-chip [routerLink]="filter.link" class="example-box" cdkDrag *ngFor="let filter of filters">
+    {{ filter.title }}
+  </mat-chip>
+</mat-chip-list>
+
 <mat-nav-list>
-  <a mat-list-item routerLink="filter.link" *ngFor="let filter of filters"> {{ filter.title }} </a>
+  <a mat-list-item *ngFor="let filter of filters"> {{ filter.title }} </a>
 </mat-nav-list>
 <app-dishes-list [dishes$]="todaysSpecialItems$"></app-dishes-list>
